# postgres-subset

./: README.md  gensql.cabal  postgres-subset.cabal  stack.yaml  tables.yaml  tables.yaml.example
app/: Main.hs
