name:                postgres-subset
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/gensql#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Ben Clifford
maintainer:          ben@beautifuldestinations.com
copyright:           2016 Beautiful Destinations
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable postgres-subset
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , postgres-subset
                     , lens
                     , lens-aeson
                     , mtl
                     , optparse-applicative
                     , postgresql-simple
                     , text
                     , transformers
                     , unordered-containers
                     , vector
                     , yaml
                     , tagged
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gensql
